Fix extra spacing

--- a/docs/assets/vue/components/panel.css
+++ b/docs/assets/vue/components/panel.css
@@ -125,6 +125,7 @@
       opacity: 0;
       pointer-events: none;
       content-visibility: hidden;
+      padding: 0;
     }
   }
 
